<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miamor.MainActivity$PlaceholderFragment" android:background="#fff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" android:gravity="center">

    <EditText
        android:id="@+id/emailCust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:hint="@string/email"
        />

    <EditText 
         android:id="@+id/firstNameCust"
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:hint="@string/firstname"
        android:layout_below="@id/emailCust"
        />

        <EditText
            android:id="@+id/lastNameCust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:layout_below="@id/firstNameCust"
            />

        <EditText
            android:id="@+id/dayofBirthCust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:layout_below="@id/lastNameCust"
            />

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveCustSetting" android:text="@string/save" android:background="@color/red"/>

    </LinearLayout>

</RelativeLayout>
