<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miamor.MainActivity$PlaceholderFragment" android:background="#fff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" android:gravity="center">

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:hint="@string/email" android:text="aa@aa.aa"
        />

    <EditText 
         android:id="@+id/passwordLogin"
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:hint="@string/password" android:text="1"
        android:layout_below="@id/emailLogin"
        />

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login" android:text="@string/login" android:background="@color/red"/>

    </LinearLayout>

</RelativeLayout>
